# tdd-task-manager-api

./: .gitignore  pyproject.toml  tasks.db
src/: app.py  model.py  models.py  utils.py
tests/: test_api.py
